--- a/src/Dashboard/styles.module.css
+++ b/src/Dashboard/styles.module.css
@@ -33,7 +33,7 @@ ul {
     text-decoration: none;
     font-weight: bold;
     color: #000;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 .nav_bar p {
@@ -247,7 +247,7 @@ nav li a:hover {
 
 .modal_top h2 {
     color: var(--primary-color);
-    font-size: 27px;
+    font-size: 22px;
 }
 
 .modal_body p {
@@ -270,6 +270,10 @@ nav li a:hover {
 @media only screen and (max-width: 768px) {
     .second_nav {
         display: flex !important;
+    }
+
+    .categories {
+    background: var(--primary-color);
     }
 
     .mobile-menu {
