--- a/src/WelcomePage/styles.css
+++ b/src/WelcomePage/styles.css
@@ -7,6 +7,7 @@
 body {
     background: #f5f5f5;
     margin: 0;
+    width: 100%;
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
 }
@@ -125,6 +126,8 @@ section {
     background: #20272e;
     color: #fff;
     z-index: 0;
+    width: 100%;
+    padding: 30px
 }
 
 .features-section ul {
@@ -235,12 +238,12 @@ nav {
     right: 0;
     top: 0;
     background-color: #20272e;
-    height: 50vh;
-    padding: 1em;
+    height: 30px;
+    padding: 0;
 }
 
 nav ul.primary-nav {
-    margin-top: 4em;
+    margin-top: 2em;
 }
 
 nav li a {
@@ -273,6 +276,7 @@ nav li a:hover {
 
     .nav-bar {
         width: 100%;
+        height: 80px;
     }
     .nav-bar .container {
         display: -ms-grid;
@@ -357,7 +361,7 @@ nav li a:hover {
         margin: 4em 3em 0 5em;
     }
     .left-col h1 {
-        font-size: 5em;
+        font-size: 3em;
         width: 90%;
     }
     .hero-img {
@@ -443,7 +447,7 @@ nav li a:hover {
     .features-section::before {
         content: '';
         position: absolute;
-        width: 10%;
+        width: 100%;
         height: 20em;
         background: var(--primary-color);
         left: 0;
@@ -452,18 +456,18 @@ nav li a:hover {
     .features-section::after {
         content: '';
         position: absolute;
-        width: 500px;
+        width: 300px;
         height: 20em;
         background: url('./Img/dots.svg') no-repeat;
-        left: 4.5;
+        left: 4.5em;
         top: 2em;
     }
 
     .circle {
         margin-top: -250px;
         background-color: white;
-        height: 50rem;
-        width: 50rem;
+        height: 250px;
+        width: 250px;
         border-radius: 50%;
         position: absolute;
         right: 0;
