--- a/src/Dashboard/styles.module.css
+++ b/src/Dashboard/styles.module.css
@@ -154,19 +154,37 @@ nav li a:hover {
     .side_bar {
         background-color: var(--primary-color);
         height: 100vh;
+        
         position: fixed;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
         width: 28rem;
-        padding-left: 1em;
-        padding-top: 2em;
+        top: 0;
+        padding-left: 0;
+        padding-top: 0;
         text-align: center;
         color: white;
         font-weight: bold;
         font-size: 1.5em;
     }
+
+    .side_bar .top_menu {
+        background-color: #20272e;
+        width: 100%;
+        height: 89px;
+        text-align: left;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+.side_bar .top_menu .logo_nav {
+    padding: 1em;
+
+}
+
     .side_bar label {
         font-size: 2.5em;
         color: greenyellow;
@@ -174,7 +192,7 @@ nav li a:hover {
     }
 
     .categories {
-        margin-left: 30rem;
+        margin-left: 28.5rem;
         grid-template-columns: repeat(2, 1fr);
     }
 }
